# libKML

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  libKML.pc.in
minizip/.deps/: minizip.Po  mztools.Po  unzip.Po  zip.Po
src/: KML.c  Makefile.am  Makefile.in  buffer.c  buffer.h  kml.h  libKML.h  zipbuffer.c
tags/0.1/: configure
tags/0.1/src/: Makefile.am  zipbuffer.h
tags/0.3/: configure
tags/0.3/src/: KML.c  kml.h  libKML.h
tags/0.4/: Makefile.am  configure  configure.ac
tags/0.4/src/: Makefile.in
tags/0.5/: configure  configure.ac
tags/0.6/: configure  configure.ac
tags/0.6/src/: KML.c  libKML.h
trunk/: Makefile.in  configure  configure.ac
trunk/minizip/: Makefile.am.bak  Makefile.in
trunk/minizip/.deps/: ioapi.Po  miniunz.Po
trunk/src/: KML.c  Makefile.am  Makefile.in  buffer.c  buffer.h  error.h  libKML.h  zipbuffer.h
